second commit - fixed folder location issue - deleted the assets folder and moved style.css and script.js to the main homework folder.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
+    <link rel="stylesheet" href="" />
+    <title>Work Day Scheduler - Third-party APIs Homework</title>
   </head>
 
   <body>
