third commit - worked on my index.html file updated the timeblocks from 9 AM to 5 PM.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,56 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here - 9 timeslots in total -->
+
+      <!-- Fist time block is 9AM - Day-planner allows user to enter events only for each hour eg. 9AM to 10AM -->
+      <div class="input-group mb-3">
+        <!-- Updating the classes and id's to work with bootstrap -->
+        <span class="input-group-text" id="*basic-addon1*">9 AM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+
+      <div class="input-group mb-3">
+        <!-- 10 AM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">10 AM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
+
+      <div class="input-group mb-3">
+        <!-- 11 AM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">11 AM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">  
+
+      <div class="input-group mb-3">
+        <!-- Noon hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">12 PM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">  
+        
+      <div class="input-group mb-3">
+        <!-- 1 PM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">1 PM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+
+      <div class="input-group mb-3">
+        <!-- 2 PM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">2 PM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+
+      <div class="input-group mb-3">
+        <!-- 3 PM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">3 PM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+
+      <div class="input-group mb-3">
+        <!-- 4 PM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">4 PM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+
+      <div class="input-group mb-3">
+        <!-- 5 PM hour time slot -->
+        <span class="input-group-text" id="*basic-addon1*">5 PM</span>
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+
+        </span>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
