Fourth commit: Further updates were made to the index.html file including the addition of a <div> and a <button> under each time block creating a save button directly to the right of each time block - Utilizing bootstrap.

--- a/index.html
+++ b/index.html
@@ -36,46 +36,93 @@
         <!-- Updating the classes and id's to work with bootstrap -->
         <span class="input-group-text" id="*basic-addon1*">9 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+        <!-- Now we need to create the save button to the right of each indivisual time block utilizing bootstrap -->
+        <div class="input-group-append" id="hour-9am">
+        <!-- A save button will be created to go directly to the right of the time block where the user can input their events -->
+        <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+      </div>
+    </div>
 
-      <div class="input-group mb-3">
-        <!-- 10 AM hour time slot -->
+        <div class="input-group mb-3">
+        <!-- 10 AM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">10 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
+        <div class="input-group-append" id="hour-10am">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
+
 
       <div class="input-group mb-3">
-        <!-- 11 AM hour time slot -->
+        <!-- 11 AM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">11 AM</span>
-        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">  
+        <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
+        <div class="input-group-append" id="hour-11am">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div> 
 
       <div class="input-group mb-3">
-        <!-- Noon hour time slot -->
+        <!-- Noon hour time block -->
         <span class="input-group-text" id="*basic-addon1*">12 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">  
+        <div class="input-group-append" id="hour-12pm">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
         
       <div class="input-group mb-3">
-        <!-- 1 PM hour time slot -->
+        <!-- 1 PM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">1 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+        <div class="input-group-append" id="hour-1pm">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
 
       <div class="input-group mb-3">
-        <!-- 2 PM hour time slot -->
+        <!-- 2 PM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">2 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+        <div class="input-group-append" id="hour-2pm">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
 
       <div class="input-group mb-3">
-        <!-- 3 PM hour time slot -->
+        <!-- 3 PM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">3 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+        <div class="input-group-append" id="hour-3pm">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
 
       <div class="input-group mb-3">
-        <!-- 4 PM hour time slot -->
+        <!-- 4 PM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">4 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+        <div class="input-group-append" id="hour-4pm">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
 
       <div class="input-group mb-3">
-        <!-- 5 PM hour time slot -->
+        <!-- 5 PM hour time block -->
         <span class="input-group-text" id="*basic-addon1*">5 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
+        <div class="input-group-append" id="hour-5pm">
+          <!-- SAVE BUTTON -->
+          <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
+        </div>
+      </div>
 
         </span>
       </div>
