fifth commit- changed one of the bootrap designs for the primary time / timeblock buttons - switched button-addon1 to inputGroupFileAddon01.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Fist time block is 9AM - Day-planner allows user to enter events only for each hour eg. 9AM to 10AM -->
       <div class="input-group mb-3">
         <!-- Updating the classes and id's to work with bootstrap -->
-        <span class="input-group-text" id="*basic-addon1*">9 AM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">9 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <!-- Now we need to create the save button to the right of each indivisual time block utilizing bootstrap -->
         <div class="input-group-append" id="hour-9am">
@@ -45,7 +45,7 @@
 
         <div class="input-group mb-3">
         <!-- 10 AM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">10 AM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">10 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
         <div class="input-group-append" id="hour-10am">
           <!-- SAVE BUTTON -->
@@ -56,7 +56,7 @@
 
       <div class="input-group mb-3">
         <!-- 11 AM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">11 AM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">11 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
         <div class="input-group-append" id="hour-11am">
           <!-- SAVE BUTTON -->
@@ -66,7 +66,7 @@
 
       <div class="input-group mb-3">
         <!-- Noon hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">12 PM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">12 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">  
         <div class="input-group-append" id="hour-12pm">
           <!-- SAVE BUTTON -->
@@ -76,7 +76,7 @@
         
       <div class="input-group mb-3">
         <!-- 1 PM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">1 PM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">1 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <div class="input-group-append" id="hour-1pm">
           <!-- SAVE BUTTON -->
@@ -86,7 +86,7 @@
 
       <div class="input-group mb-3">
         <!-- 2 PM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">2 PM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">2 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <div class="input-group-append" id="hour-2pm">
           <!-- SAVE BUTTON -->
@@ -96,7 +96,7 @@
 
       <div class="input-group mb-3">
         <!-- 3 PM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">3 PM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">3 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <div class="input-group-append" id="hour-3pm">
           <!-- SAVE BUTTON -->
@@ -106,7 +106,7 @@
 
       <div class="input-group mb-3">
         <!-- 4 PM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">4 PM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">4 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <div class="input-group-append" id="hour-4pm">
           <!-- SAVE BUTTON -->
@@ -116,7 +116,7 @@
 
       <div class="input-group mb-3">
         <!-- 5 PM hour time block -->
-        <span class="input-group-text" id="*basic-addon1*">5 PM</span>
+        <span class="input-group-text" id="inputGroupFileAddon01">5 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <div class="input-group-append" id="hour-5pm">
           <!-- SAVE BUTTON -->
