--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler - Third-party APIs Homework</title>
   </head>
 
