--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
       </div>
     </div>
 
+    <!-- link the jquery and the ajax to the html -->
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
