Thursday commit 2 - updated the comments and the time blocks section of index.htmls and added the first variable for currentTime in script.js.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!-- The current day is displayed at the top of the calendar -->
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here - 9 timeslots in total -->
-
+      <!-- Each timeblock contains an input field and save button -->
       <!-- Fist time block is 9AM - Day-planner allows user to enter events only for each hour eg. 9AM to 10AM -->
       <div class="input-group mb-3">
         <!-- Updating the classes and id's to work with bootstrap -->
