Debugged the index.html id error that was causing me issues. I had to label all of my timeblocks with consistant ids- removed the am and pm and went with numbers 9 through 17 instead.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span class="input-group-text" id="inputGroupFileAddon01">9 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
         <!-- Now we need to create the save button to the right of each indivisual time block utilizing bootstrap -->
-        <div class="input-group-append" id="hour-9am">
+        <div class="input-group-append" id="hour-9">
         <!-- A save button will be created to go directly to the right of the time block where the user can input their events -->
         <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
       </div>
@@ -48,7 +48,7 @@
         <!-- 10 AM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">10 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
-        <div class="input-group-append" id="hour-10am">
+        <div class="input-group-append" id="hour-10">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -59,7 +59,7 @@
         <!-- 11 AM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">11 AM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2"> 
-        <div class="input-group-append" id="hour-11am">
+        <div class="input-group-append" id="hour-11">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -69,7 +69,7 @@
         <!-- Noon hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">12 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">  
-        <div class="input-group-append" id="hour-12pm">
+        <div class="input-group-append" id="hour-12">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -79,7 +79,7 @@
         <!-- 1 PM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">1 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
-        <div class="input-group-append" id="hour-1pm">
+        <div class="input-group-append" id="hour-13">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -89,7 +89,7 @@
         <!-- 2 PM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">2 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
-        <div class="input-group-append" id="hour-2pm">
+        <div class="input-group-append" id="hour-14">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -99,7 +99,7 @@
         <!-- 3 PM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">3 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
-        <div class="input-group-append" id="hour-3pm">
+        <div class="input-group-append" id="hour-15">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -109,7 +109,7 @@
         <!-- 4 PM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">4 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
-        <div class="input-group-append" id="hour-4pm">
+        <div class="input-group-append" id="hour-16">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
@@ -119,14 +119,12 @@
         <!-- 5 PM hour time block -->
         <span class="input-group-text" id="inputGroupFileAddon01">5 PM</span>
         <input type="text" class="form-control task" aria-label="Recepient's username" aria-describedby="button-addon2">
-        <div class="input-group-append" id="hour-5pm">
+        <div class="input-group-append" id="hour-17">
           <!-- SAVE BUTTON -->
           <button class="btn btn-outline-secondary save-button" type="button" id="button-addon2">Save</button>
         </div>
       </div>
 
-        </span>
-      </div>
     </div>
 
     <!-- link the jquery and the ajax to the html -->
@@ -137,5 +135,6 @@
     <!-- Almost forgot to link the script.js -->
 
     <script src="script.js"></script>
+    
   </body>
 </html>
